[Doc] Fix sidebar scroll (#41699)
This PR allows the sidebar to scroll if it overflows the page.

--- a/doc/source/_static/css/custom.css
+++ b/doc/source/_static/css/custom.css
@@ -13,7 +13,18 @@
     --pst-color-primary: 4, 117, 222;
     --pst-color-text-secondary: #616161;
     --blue: #0475DE;
-    --sidebar-top: 5em;
+    --sidebar-top: 4em;
+    --navbar-brand-box-height: 8em;
+    --algolia-div-size: 5em;
+}
+
+#bd-docs-nav {
+  overflow: auto;
+  max-height: calc(100vh - var(--sidebar-top) - var(--navbar-brand-box-height) - var(--algolia-div-size));
+}
+
+.bd-search {
+  height: calc(--algolia-div-size);
 }
 
 /* Remove flicker for announcement top bar replacement */
@@ -38,7 +49,8 @@
 }
 
 div.navbar-brand-box {
-    padding-top: 4em;
+  padding-top: 4em;
+  height: calc(--navbar-brand-box-height);
 }
 
 td p {
@@ -292,10 +304,11 @@ pre {
 
 
 .topnav {
-    background-color: white;
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
-    display: flex;
-    align-items: center;
+  background-color: white;
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+  display: flex;
+  align-items: center;
+  height: var(--sidebar-top);
 }
 
 /* Content wrapper for the unified nav link / menus */
@@ -915,4 +928,3 @@ footer.col.footer > p {
   .mantine-Modal-root figure {
     padding: 0 !important;
   }
-  
